--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ services:
     container_name: jobmanager
     hostname: jobmanager
     build:
-      context: .   # relative path to the Nifi Dockerfile
-      dockerfile: flink.Dockerfile
+      context: ./flink-monitor   # relative path to the Nifi Dockerfile
     ports:
       - "8082:8082"
     command: jobmanager
@@ -21,8 +20,7 @@ services:
 
   taskmanager:
     build:
-      context: .   # relative path to the Nifi Dockerfile
-      dockerfile: flink.Dockerfile
+      context: ./flink-monitor   # relative path to the Nifi Dockerfile
     depends_on:
       - jobmanager
     command: taskmanager
@@ -35,26 +33,30 @@ services:
 #    networks: # networks to connect
 #      flink_network: # the name of the network
 
-#  zookeeper:
-#    image: wurstmeister/zookeeper:latest
-#    ports:
-#      - "2181:2181"
-#
-#  kafka:
-#    image: wurstmeister/kafka:latest
-#    ports:
-#      - "9092:9092"
-#    expose:
-#      - "9093"
-#    environment:
-#      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
-#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-#      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
-#      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-#      KAFKA_CREATE_TOPICS: "input-topic:1:1,output-topic:1:1"
-#    volumes:
-#      - /var/run/docker.sock:/var/run/docker.sock
+  zookeeper:
+    image: wurstmeister/zookeeper:latest
+    ports:
+      - "2181:2181"
+
+  kafka:
+    image: bitnami/kafka:3.7
+    ports:
+      - "9092:9092"
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    depends_on:
+      - zookeeper
+
+  producer:
+    build:
+      context: ./kafka-client
+    depends_on:
+      - kafka
+    restart: "no"
 
 #networks:
 #  flink_network:
