--- a/flink-monitor/pom.xml
+++ b/flink-monitor/pom.xml
@@ -53,6 +53,12 @@
             <version>${flink.version}</version>
             <!--			<scope>provided</scope>-->
         </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-files</artifactId>
+            <version>${flink.version}</version>
+<!--            <scope>provided</scope>-->
+        </dependency>
 
         <!-- Add connector dependencies here. They must be in the default scope (compile). -->
 
