--- a/.env
+++ b/.env
@@ -7,7 +7,9 @@ FLINK_PARALLELISM_DEFAULT=2
 JOBMANAGER_RPC_ADDRESS=jobmanager
 JOBMANAGER_REST_ADDR=jobmanager
 JOBMANAGER_REST_PORT=8082
+JOBMANAGER_MEMORY=2048m
 
 # TaskManager specific
 TASKMANAGER_RPC_ADDRESS=jobmanager
-TASKMANAGER_NUMBER_OF_TASK_SLOTS=3
+TASKMANAGER_NUMBER_OF_TASK_SLOTS=16
+TASKMANAGER_MEMORY=2048m
