--- a/flink-monitor/Dockerfile
+++ b/flink-monitor/Dockerfile
@@ -1,5 +1,4 @@
 FROM flink:2.0.0-scala_2.12-java11
 
 RUN apt-get update && apt-get install curl -y
-RUN mkdir /results
-RUN chmod 777 /results
+RUN mkdir -p -m 777 /metrics /results
